[package]
name = "hath-rust"
version = "1.10.0"
edition = "2024"
build = "build.rs"

[dependencies]
arc-swap = "1.7"
async-stream = "0.3"
axum = { version = "0.8", default-features = false, features = ["http1", "matched-path"] }
base64 = "0.22.1"
bytes = "1.9.0"
chrono = { version = "0.4", default-features = false, features = [ "now" ] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
const_format = "0.2.32"
filesize = "0.2"
filetime = "0.2"
futures = "0.3"
hex = "0.4"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.5.1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
idna_adapter = "~1.0.0" # Pin 1.0 to disable url idna support
inquire = { version = "0.7", default-features = false, features = ["crossterm"] }
log = { version = "0.4", features = ["std"] }
mime = "0.3"
p12 = "0.6.3"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
pin-project-lite = "0.2"
rand = { version = "0.9.0", default-features = false, features = ["alloc", "os_rng", "small_rng"] }
regex-lite = "0.1.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "socks"] }
rmp-serde = "1.3.0"
rustls = { version = "0.23.18", default-features = false, features = ["brotli", "ring", "std", "tls12", "zlib"] }
scopeguard = "1.2"
serde = { version = "1.0.216", features = ["serde_derive"] }
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12"] }
tokio-stream = { version = "0.1", default-features = false, features = ["fs"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower = { version = "0.5.1", features = ["timeout"] }
unicode-segmentation = "1.12.0"
webpki-roots = "0.26.7"
x509-cert = { version = "0.2.5", default-features = false }
x509-ocsp = { version = "0.2.1", features = ["builder"] }

# cpufeatures not support all platforms
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
cpufeatures = "0.2"

[target.'cfg(not(any(target_env = "msvc", target_os = "macos")))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads", "unprefixed_malloc_on_supported_platforms"] }

[target.'cfg(target_os = "macos")'.dependencies]
tikv-jemallocator = { version = "0.6" } # jemalloc not support background threads and unprefix on macos

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.34", features = ["fs"] }
sha1 = { version = "0.10.6", default-features = false, features = ["asm", "oid"] }

[target.'cfg(windows)'.dependencies]
sha1 = { version = "0.10.6", default-features = false, features = ["oid"] } # sha1-asm not support windows
tray-icon = { version = "0.20.0", default-features = false }
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }
tao = "0.32.0"

[build-dependencies]
vergen-gix = "1.0"

[profile.release]
lto = true
strip = true
