[package]
name = "hath-rust"
version = "1.13.1"
edition = "2024"
description = "The unofficial Hentai@Home client written in Rust."
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
arc-swap = "1.7"
async-stream = "0.3"
aws-lc-rs = { version = "1.13.0", default-features = false }
axum = { version = "0.8", default-features = false, features = ["http1", "matched-path"] }
bytes = "1.10.1"
chrono = { version = "0.4", default-features = false, features = [ "now" ] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
const-hex = "1.14.0"
const_format = "0.2.32"
fastrand = "2.3.0"
filesize = "0.2"
filetime = "0.2"
futures = "0.3"
h3 = "0.0.8"
http-body = "1.0"
http-body-util = "0.1"
httpdate = "1.0.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.17", features = ["tokio", "service"] }
idna_adapter = "~1.0.0" # Pin 1.0 to disable url idna support
inquire = { version = "0.9.1", default-features = false, features = ["crossterm"] }
log = { version = "0.4", features = ["std"] }
mime = "0.3"
p12 = "0.6.3"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
pin-project-lite = "0.2"
prometheus-client = "0.24.0"
quinn = { version = "0.11.9", default-features = false, features = ["bloom", "runtime-tokio", "rustls-aws-lc-rs"] }
regex-lite = "0.1.6"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-manual-roots-no-provider", "stream", "socks"] }
rmp-serde = "1.3.0"
rustls = { version = "=0.23.33", default-features = false, features = ["brotli", "aws_lc_rs", "std", "tls12", "zlib"] } # Patch rustls to support Prioritize ChaCha20
scopeguard = "1.2"
serde = { version = "1.0.216", features = ["serde_derive"] }
tempfile = "3.19.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["tls12"] }
tokio-stream = { version = "0.1", default-features = false, features = ["fs"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["set-header"] }
unicode-segmentation = "1.12.0"
webpki-roots = "1.0.2"

# cpufeatures not support all platforms
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
cpufeatures = "0.2"

[target.'cfg(not(any(target_env = "msvc", target_vendor = "apple")))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads", "override_allocator_on_supported_platforms"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["override_allocator_on_supported_platforms"] } # jemalloc not support background threads on macos

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.2", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.21.1", default-features = false }
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }
tao = "0.34.0"

[build-dependencies]
vergen-gix = "1.0.9"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3.1"

[patch.crates-io]
rustls = { git = "https://github.com/james58899/rustls.git", tag = "0.23.33-patch" }

[profile.release]
lto = true
opt-level = "s"
strip = true

# Override package opt level
[profile.release.package.aws-lc-rs]
opt-level = 3
[profile.release.package.aws-lc-sys]
opt-level = 3
[profile.release.package.quinn]
opt-level = 3
[profile.release.package.quinn-proto]
opt-level = 3
[profile.release.package.rustls]
opt-level = 3
[profile.release.package.tikv-jemalloc-sys]
opt-level = 3
